Fixed bug #42637 (SoapFault : Only http and https are allowed)